# FunctionalPractices

1_KeepIf/: CMakeLists.txt  main.cpp
2_Parse/: CMakeLists.txt  main.cpp
3_LongestEdgeOfPoly/: CMakeLists.txt  main.cpp
4_Currying/: CMakeLists.txt  main.cpp
KeepIf/: CMakeLists.txt  main.cpp
